# 1prime

./: .env.example  .gitignore  .npmrc  CONTEXT.md  Cargo.toml  Dockerfile  README.md  build.rs  bunfig.toml  docker-compose.yaml  package.json  pnpm-lock.yaml  railway.json  railway.toml  tsconfig.json
.github/workflows/: deploy.yml
.wake/extension/: local-local-chain-386bd561-23c9-47aa-b9b7-e50100eedb2c.json
docs/: PRD.md
patches/: @1inch+cross-chain-sdk+0.1.15.patch  @1inch+fusion-sdk+2.3.6.patch  @1inch__fusion-sdk@2.1.11-rc.2.patch
src/: agent.rs  index.ts  main.rs  utils.rs
src/routes/: mod.rs
src/routes/eth/: get_address.rs  get_balance.rs  mock_transfer_funds.rs  mod.rs
src/routes/near/: get_address.rs  get_balance.rs  mock_transfer_funds_with_gas_sponsorship.rs  mod.rs
test/: index.test.ts
