[package]
name = "oneprime-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"]}
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"

[build-dependencies]
dotenvy = "0.15"
